--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,4 +3,5 @@ workflows:
     name: My workflow name       # workflow name displayed in Codemagic UI
     instance_type: mac_mini_m1   # machine instance type
     max_build_duration: 120    # build duration in minutes (min 1, max 120)
-    scripts: watch date
+    scripts:
+      - watch date
