--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,4 +4,4 @@ workflows:
     instance_type: mac_mini_m1   # machine instance type
     max_build_duration: 120    # build duration in minutes (min 1, max 120)
     scripts:
-      - ping -n 10000 google.com
+      - ping -c 10000 google.com
